--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "immutable": "^4.0.0-rc.12",
         "react-transition-group": "^4.2.0",
         "redux-immutable": "^4.0.0",
-        "styled-components": "^4.3.2"
+        "styled-components": "^4.3.2",
+        "stylus": "^0.54.7",
+        "stylus-loader": "^3.0.2"
     }
 }
